Version 1.3.7, released ??

Created a new mailing list, randoop-discuss@googlegroups.com, for
discussions with Randoop users.  It is open to join and should be easier to
search than the existing randoop-developers@googlegroups.com mailing list.


Version 1.3.6, released August 10, 2015

Command-line-argument --junit-reflection-allowed=false causes Randoop to
avoid use of JUnit's reflective test invocation.  Use of direct method
calls instead can make Randoop's generated tests easier to analyze.

Changed default for --literals-level to CLASS.

Improvements in treatment of observer methods:  put observer results in the
pool, but not receivers after observer invocations.  If you are not using
observers when you run Randoop, then you are not using Randoop as intended
and Randoop may be generating sub-optimal test suites.

Fix bugs, notably:
 * #18 Handle non-visible thrown exceptions
 * #51 Use better variable names in generated tests
 * Use equals, not ==, to compare NaN

Many documentation improvements, including clarifications and
restructuring.  The manual mentions the Maven plug-in and explains that
Randoop is deterministic but your sequential Java program may not be.

Not directly related to Randoop, but possibly of interest to Randoop users:
ABB Corporation has released an improved version of Randoop.NET.  Compared to
the original version of Randoop.NET from Microsoft Research:
 * It fixes some bugs.
 * It adds new features, notably regression assertions for more effective
   regression testing, method transformers to delete or replace calls to
   specific methods in the assembly, and richer debug information collection.
 * It adds a GUI, as a VS2010 add-in.
The Java implementation of Randoop continues to have more features than
Randoop.NET, but ABB's improvements make the .NET tool more usable.


Version 1.3.5, released May 28, 2015

Command-line argument --check-regression-behavior controls whether the tests
include assertions about the current behavior.
