@@ -89,7 +89,7 @@ projects.
 
 <p>
 For example, here
-is a <a href="http://junit.sourceforge.net/" rel="nofollow">JUnit</a> test case
+is a <a href="http://junit.org" rel="nofollow">JUnit</a> test case
 generated by Randoop that reveals an error in Sun's JDK (comments
 added by hand): </p>
 
@@ -97,6 +97,7 @@ added by hand): </p>
 
   // This test shows that the JDK collection classes
   // can create an object that is not equal to itself.
+  @Test
   public static void test1() {
 
     LinkedList list = new LinkedList();
@@ -114,7 +115,7 @@ added by hand): </p>
     // At this point, we have successfully created a set (s1)
     // that violations reflexivity of equality: it is not equal
     // to itself! This assertion fails at runtime on Sun's JDK.
-    Assert.assertTrue(s1.equals(s1));
+    org.junit.Assert.assertTrue(s1.equals(s1));
   }
 </pre>
 
@@ -249,10 +250,13 @@ and use the <tt>--classlist</tt> option: </p>
 
 <pre class="code">Created file: my/home/directory/RandoopTest0.java
 Created file: my/home/directory/RandoopTest.java
-done.</pre><p>The main test driver is in class <tt>RandoopTest</tt>. You can now compile and run the tests. Don't forget to include <tt>junit.jar</tt> in the classpath when you compile and run the tests. In this example, you should also add the current directory (&quot;.&quot;) when you run the tests. </p>
+done.</pre>
+<p>
+The main test suite is in class <tt>RandoopTest</tt>. You can now compile and run the tests. Don't forget to include <tt>junit.jar</tt> and <tt>hamcrest-core.jar</tt> in the classpath when you compile and run the tests. In this example, you should also add the current directory (&quot;.&quot;) when you run the tests. 
+</p>
 
 <pre class="code">javac -classpath randoop.jar:... RandoopTest*.java
-java -classpath .:randoop.jar junit.textui.TestRunner RandoopTest</pre>
+java -classpath .:randoop.jar org.junit.runner.JUnitCore RandoopTest</pre>
 <p>JUnit will execute the generated tests. Most will pass, and some will fail. The next section describes the kinds of tests that Randoop generates, and the reason why they may fail. </p>
 
 
@@ -334,7 +338,7 @@ ignored.
 <h3 id="error_revealing_tests">Error-revealing Tests</h3>
 
 <p>Failing tests show a specific use of a class under test that leads
-to a runtime violation of a contract; a <i>contracts</i> is just a
+to a runtime violation of a contract; a <i>contract</i> is a
 property that a class, object or method is expected to preserve,
 e.g. an object invariant or a method postcondition. Contract
 violations suggest errors in the code. For example, the test shown in
@@ -346,6 +350,7 @@ return <tt>true</tt>. </p>
 
 <pre class="code">// This test shows that the JDK collection classes
 // can create an object that is not equal to itself.
+@Test
 public static void test1() {
 
   LinkedList list = new LinkedList();
@@ -363,11 +368,11 @@ public static void test1() {
   // At this point, we have successfully created a set (s1)
   // that violations reflexivity of equality: it is not equal
   // to itself! This assertion fails at runtime on Sun's JDK.
-  Assert.assertTrue(s1.equals(s1));
+  org.junit.Assert.assertTrue(s1.equals(s1));
 }</pre>
-<p>The test shown above is nicely succinct: it shows a small number of method calls leading up to the assertion violation. Because Randoop's generation is random, the actual test revealing the error can be significantly longer, and contain many &quot;random&quot; calls leading up to the violation. An older version of Randoop used to have a <i>minimizer</i> built in, i.e. a module that attempted to reduce the number of calls in a failing test to ease debugging. The current version of the tool does not have a minimizer &mdash; but we are hoping to implement it for the next release. </p>
+<p>The test shown above is nicely succinct: it shows a small number of method calls leading up to the assertion violation. Because Randoop's generation is random, the actual test revealing the error can be significantly longer, and contain many &quot;random&quot; calls leading up to the violation. An older version of Randoop used to have a <i>minimizer</i> built in, i.e. a module that attempted to reduce the number of calls in a failing test to ease debugging. The current version of the tool does not have a minimizer &mdash; but we are hoping to implement it for a future release. </p>
 
-<p>This test shows a scenario that makes it possible to create a <tt>TreeSet</tt> that violates reflexivity of equality. Test test reveals an error in the <tt>TreeSet</tt> constructor, which does not properly check its arguments (and possibly a second error in the <tt>TreeSet.equals</tt> method, which should always check if its argument is the same object as itself and return <tt>true</tt> in such a case). </p>
+<p>This test shows a scenario that makes it possible to create a <tt>TreeSet</tt> that violates reflexivity of equality. The test reveals an error in the <tt>TreeSet</tt> constructor, which does not properly check its arguments (and possibly a second error in the <tt>TreeSet.equals</tt> method, which should always check if its argument is the same object as itself and return <tt>true</tt> in such a case). </p>
 
 <h4 id="kinds_of_errors">What kinds of errors does Randoop check for?</h4>  <!-- omit from toc -->
 
@@ -399,7 +404,7 @@ under test. Regression tests are useful because they can alert you in
 the future if you make a change to your code that changes the external
 behavior of the classes.
 Once you have generated a regression test using Randoop, you can run it
-every night, or whenever you make a change to the code...  however often
+every night, or whenever you make a change to the code &mdash; however often
 works well for you.
 </p>
 
@@ -409,6 +414,7 @@ the TreeSet class we
 generated tests for in the previous section. </p>
 
 <pre class="code">// This test passes when executed
+@Test
 public void test10() throws Throwable {
 
   java.util.TreeSet var0 = new java.util.TreeSet();
@@ -416,7 +422,7 @@ public void test10() throws Throwable {
   boolean var2 = var0.contains(var1);
 
   // Regression assertion (captures the current behavior of the code)
-  assertTrue(var2 == false);
+  org.junit.Assert.assertTrue(var2 == false);
 }</pre>
 
 <p>This test will pass when you run it right after executing it. But notice that it captures an important behavior of the method TreeSet.contains: it returns false if the set is empty. If later, as the developers of this class, we introduced an error that caused contains to return true on an empty set, the test would fail and thus alert us to the error. </p>
